--- a/2023-14/style.css
+++ b/2023-14/style.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
   background-image: linear-gradient(#fffadc, #fffef6);
 }
 
