--- a/2023-14/style.scss
+++ b/2023-14/style.scss
@@ -19,6 +19,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; 
+  margin: 0 auto;
   background-image:linear-gradient(lighten($yellow, 40%), lighten($yellow, 45%));
 }
 
