--- a/2022-23/style.css
+++ b/2022-23/style.css
@@ -3,59 +3,50 @@
 body {
   height: 100vh;
   width: 100vw;
-  position: relative;
-  background: repeating-conic-gradient(#c30000 0 15deg, transparent 15deg 30deg), radial-gradient(circle, #c30000 0vh, #c30000 0.75vh, transparent 0.75vh) calc(50% + 5vh) 25vh/3vh 3vh repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a90000), color-stop(100vh, #dc0000)) 0vw 0vh/100vw 100vh no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
   background: repeating-conic-gradient(#c30000 0 15deg, transparent 15deg 30deg), radial-gradient(circle, #c30000 0vh, #c30000 0.75vh, transparent 0.75vh) calc(50% + 5vh) 25vh/3vh 3vh repeat, linear-gradient(#a90000 0vh, #dc0000 100vh) 0vw 0vh/100vw 100vh no-repeat;
 }
 
 div:before, div:after {
   display: block;
-  content: '';
+  content: "";
   position: absolute;
 }
 
 div.pop {
-  width: 100vw;
-  height: 100vh;
+  width: 100vmin;
+  height: 100vmin;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 div.pop:before {
-  width: 80vh;
-  height: 50vh;
+  width: 80vmin;
+  height: 50vmin;
   border-radius: 90%;
-  content: 'CSS!';
-  font-family: 'Spicy Rice', cursive;
-  font-size: 45vh;
+  content: "CSS!";
+  font-family: "Spicy Rice", cursive;
+  font-size: 45vmin;
   color: #333333;
-  -webkit-box-shadow: 25px 10px 5px 5px #333333;
-          box-shadow: 25px 10px 5px 5px #333333;
-  -webkit-transform: rotate(-5deg);
-          transform: rotate(-5deg);
-  background: radial-gradient(circle, #1b9bbf 0vh, #1b9bbf 0.75vh, transparent 0.75vh) calc(50% + 5vh) 25vh/3vh 3vh repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #1889a8), color-stop(100vh, #1b9bbf)) 0vw 0vh/100vw 100vh no-repeat;
-  background: radial-gradient(circle, #1b9bbf 0vh, #1b9bbf 0.75vh, transparent 0.75vh) calc(50% + 5vh) 25vh/3vh 3vh repeat, linear-gradient(#1889a8 0vh, #1b9bbf 100vh) 0vw 0vh/100vw 100vh no-repeat;
+  box-shadow: 25px 10px 5px 5px #333333;
+  transform: rotate(-5deg);
+  background: radial-gradient(circle, #1b9bbf 0vmin, #1b9bbf 0.75vmin, transparent 0.75vmin) calc(50% + 5vmin) 25vmin/3vmin 3vmin repeat, linear-gradient(#1889a8 0vmin, #1b9bbf 100vmin) 0vw 0vmin/100vmin 100vmin no-repeat;
 }
 
 div.pop:after {
-  width: 80vh;
-  height: 50vh;
+  width: 80vmin;
+  height: 50vmin;
   border-radius: 90%;
-  content: 'CSS!';
-  font-family: 'Spicy Rice', cursive;
-  font-size: 45vh;
-  margin-top: -5vh;
-  margin-left: -5vh;
+  content: "CSS!";
+  font-family: "Spicy Rice", cursive;
+  font-size: 45vmin;
+  margin-top: -5vmin;
+  margin-left: -5vmin;
   color: #F5E702;
-  -webkit-transform: rotate(-5deg);
-          transform: rotate(-5deg);
+  transform: rotate(-5deg);
 }
-/*# sourceMappingURL=style.css.map */
