--- a/style.scss
+++ b/style.scss
@@ -21,12 +21,12 @@ header {
 main.grid { 
   max-width: 100vw;
   display: grid; 
-  grid-template-columns: repeat(2, 1fr); 
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   grid-column-gap: 2vmin;
   grid-row-gap: 2vmin; 
-  @media (max-width: 1100px) {
-    grid-template-columns: repeat(1, 1fr); 
-  }
+  // @media (max-width: 1100px) {
+  //   grid-template-columns: repeat(1, 1fr); 
+  // }
 }
 
 iframe {
