--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ main.grid {
   max-width: 90vw;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(2, minmax(320px, 1fr));
+  grid-template-columns: repeat(2, minmax(45vmin, 1fr));
   grid-column-gap: 5vmin;
   grid-row-gap: 5vmin;
+    aspect-ratio: 16/9
 }
 
 
@@ -76,17 +77,14 @@ iframe:after {
     top:-2.5vmin;
 }
 
-
-@media (max-width: 1300px) {
+@media (max-width: 980px) and (-webkit-device-pixel-ratio: 3)
+  and (orientation: portrait) {
   main.grid {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(1, minmax(90vmin, 1fr));
+    aspect-ratio: 1.3/1
   }
 }
-@media (max-width: 1300px) {
-  iframe {
-    min-height: 80vmin;
-  }
-}
+
+
 
 /*# sourceMappingURL=style.css.map */
