--- a/2023-19/style.scss
+++ b/2023-19/style.scss
@@ -17,8 +17,8 @@ div, div:before, div:after {
 }
 
 body {
-  height: 100vw;
-  width: 100vh;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center; 
