--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ main.grid {
   grid-template-columns: repeat(2, minmax(45vmin, 1fr));
   grid-column-gap: 5vmin;
   grid-row-gap: 5vmin;
-    aspect-ratio: 16/9
+    aspect-ratio: 1.3/1
 }
 
 
@@ -84,7 +84,13 @@ iframe:after {
     aspect-ratio: 1.3/1
   }
 }
-
+media (min-width: 980px) and (-webkit-device-pixel-ratio: 3)
+  and (orientation: portrait) {
+  iframe {
+    min-height: 50vmin;
+  }
+}
+  
 
 
 /*# sourceMappingURL=style.css.map */
