--- a/style.css
+++ b/style.css
@@ -7,10 +7,9 @@ header {
   color: #555;
   text-transform: uppercase;
   padding: 0.5rem;
-  margin-bottom: 0vmin;
-  padding-left: 5vmin;
-  margin-top: 3vmin;
+  text-align: center;
   font-size: 3vmin;
+  margin: 3vmin auto 0vmin;
 }
 
 header a, header a:visited {
@@ -23,14 +22,21 @@ header a:hover, header a:active {
   text-decoration: underline;
 }
 
+
+h1 {
+  font-size: clamp(1vmin, 20rem, 3vmin);
+}
+
+
 main.grid {
   max-width: 90vw;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(2, minmax(45vmin, 1fr));
+  grid-template-columns: repeat(2, minmax(45vmin, 60vmin));
   grid-column-gap: 5vmin;
   grid-row-gap: 5vmin;
-    aspect-ratio: 1.3/1
+  aspect-ratio: 1/1;
+  margin: 0 auto;
 }
 
 
@@ -54,7 +60,10 @@ iframe {
   margin: 0vmin 5vmin;
   padding: 7.5vmin;
   position: relative;
-  text-align: center;  
+  text-align: center; 
+  min-height: 40vmin;  
+  max-height:  60vmin;
+  aspect-ratio: 1/1;
 }
 iframe:before {
     border-radius:2px;
@@ -77,20 +86,13 @@ iframe:after {
     top:-2.5vmin;
 }
 
-@media (max-width: 980px) and (-webkit-device-pixel-ratio: 3)
-  and (orientation: portrait) {
+@media (max-width: 980px) {
   main.grid {
-  grid-template-columns: repeat(1, minmax(90vmin, 1fr));
-    aspect-ratio: 1.3/1
+  grid-template-columns: repeat(1, minmax(60vmin, 80vmin));
+
   }
 }
-media (min-width: 980px) and (-webkit-device-pixel-ratio: 3)
-  and (orientation: portrait) {
-  iframe {
-    min-height: 50vmin;
-  }
-}
-  
+
 
 
 /*# sourceMappingURL=style.css.map */
