--- a/style.scss
+++ b/style.scss
@@ -1,50 +1,71 @@
 body {
   font-family: poppins, sans-serif;
+  background: radial-gradient(#ededed, #c6c6c6);
 }
 
-header {
-  background-color: #333;
-  color: #bbb;
+header { 
+  color: #555;
   text-transform: uppercase;
   padding: 0.5rem;
-  margin-bottom: 1vmin;
-  a, a:visited {
-    color: #eee;
-    text-decoration: none;
-  }
-  a:hover, a:active { 
-    color: #fff; 
-    text-decoration: underline;
-  } 
+  text-align: center;
+  font-size: 3vmin;
+  margin: 3vmin auto 0vmin;
 }
 
-main.grid { 
-  max-width: 100vw;
-  display: grid; 
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-column-gap: 2vmin;
-  grid-row-gap: 2vmin; 
-  // @media (max-width: 1100px) {
-  //   grid-template-columns: repeat(1, 1fr); 
-  // }
+header a, header a:visited {
+  color: #555;
+  text-decoration: none;
 }
+
+header a:hover, header a:active {
+  color: #222;
+  text-decoration: underline;
+}
+
+
+h1 {
+  font-size: clamp(1vmin, 20rem, 3vmin);
+}
+
+
+main.grid {
+  max-width: 90vw;
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(45vmin, 60vmin));
+  grid-column-gap: 5vmin;
+  grid-row-gap: 5vmin;
+  aspect-ratio: 1/1;
+  margin: 0 auto;
+}
+
+
+main.grid a {
+  margin: 0 auto;
+  display: block;
+}
+
 
 iframe {
-  background-color:#ddc;
-  border:solid 5vmin #eee;
-  border-bottom-color:#fff;
-  border-left-color:#eee;
+  background-color:#eaeaea;
+  border:solid 5vmin #444;
+  border-bottom-color:#333;
+  border-left-color:#444;
   border-radius:2px;
-  border-right-color:#eee;
-  border-top-color:#ddd;
+  border-right-color:#444;
+  border-top-color:#333;
   box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
   box-sizing:border-box;
-  display:inline-block;
-  margin:10vh 10vw;
-  padding:8vmin;
-  position:relative;
-  text-align:center;
-  &:before {
+  display:inline-block;  
+  margin: 0vmin 5vmin;
+  padding: 7.5vmin;
+  position: relative;
+  text-align: center; 
+  min-height: 40vmin;  
+  max-height:  60vmin;
+  aspect-ratio: 1/1;
+}
+iframe:before {
     border-radius:2px;
     bottom:-2vmin;
     box-shadow:0 2px 5px 0 rgba(0,0,0,.25) inset;
@@ -53,8 +74,8 @@ iframe {
     position:absolute;
     right:-2vmin;
     top:-2vmin;
-  }
-  &:after {
+}
+iframe:after {
     border-radius:2px;
     bottom:-2.5vmin;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.25);
@@ -63,9 +84,15 @@ iframe {
     position:absolute;
     right:-2.5vmin;
     top:-2.5vmin;
+}
+
+@media (max-width: 980px) {
+  main.grid {
+  grid-template-columns: repeat(1, minmax(60vmin, 80vmin));
+
   }
 }
 
-iframe:nth-child(9n-2) {
-  grid-column: 1 / -1
-}
+
+
+/*# sourceMappingURL=style.css.map */
